# sqlite

./: .gitignore  CMakeLists.txt  Makefile  common.mk  sqlite-cpp
lib/argparser/: argparser.cpp  makefile
src/: CMakeLists.txt  main.cpp
src/argparser/: argparser.cpp
src/lib/argparser/: argparser.cpp  argparser.hpp  main.cpp  tests.cpp
src/lib/dot-commands/: dbinfo.cpp  dbinfo.hpp  dot-commands.cpp  dot-commands.hpp  tables.cpp
src/lib/records/: record-cell.cpp  record-cell.hpp  record-header.cpp  record-header.hpp  record-serial.cpp  record-serial.hpp  records-serial.cpp  records-serial.hpp
src/lib/sql/: Grammar.md  Makefile  lexer.cpp  lexer.hpp  main.cpp  non-terminals.cpp  non-terminals.hpp  parser.cpp  parser.hpp  terminals.cpp  terminals.hpp  tokens.hpp
src/lib/types/: columns.cpp
src/lib/utils/: bits.cpp  math.cpp  numbers.cpp  numbers.hpp  numbers.tests.cpp  strings.cpp  strings.hpp  varint.cpp  varint.tests.cpp  vectors.cpp
src/utils/: strings.cpp
